--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap link-->
     <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <!--my file css-->
+    <link rel="stylesheet" href="style/style.css">
+    <title>Restaurant</title>
 </head>
 <body>
     <h1>Hello bootstrap</h1>
@@ -98,5 +101,6 @@
     </footer>
 
     <script src="bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
