--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <title>Restaurant</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+
+    <!--navBar-->
+    <nav class="navbar navbar-expand-lg navigation-wrap bg-light fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">Resto Essalam</a>
+            <a href="#" class="navbar-brand"><img src="images/logo.png" width="100px" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="#" class="nav-link active">Home</a>
                     </li>
@@ -29,6 +31,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Contact</a>
+                    </li>
+                    <li>
+                        <button class="main-btn">+2126 01 02 03 04</button>
                     </li>
                 </ul>
             </div>
