--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,36 @@
 
 <body>
 
+    <!--navBar-->
+    <nav class="navbar navbar-expand-lg navigation-wrap bg-light fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="images/logo.png" width="100px" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="aboutus.html" class="nav-link active">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                    <li>
+                        <button class="main-btn">+2126 01 02 03 04</button>
+                    </li>
+                </ul>
+            </div>
+            
+        </div>
+    </nav>
+
     <header class="header">
         <div class="container">
             <div class="row row-header">
