--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css">
     <!--my file css-->
     <link rel="stylesheet" href="css/style.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!--icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Restaurant</title>
 </head>
 <body>
@@ -21,16 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">Home</a>
+                        <a href="#" class="nav-link active"><i class="fa-solid fa-house fa-lg"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="aboutus.html" class="nav-link">About</a>
+                        <a href="aboutus.html" class="nav-link"><i class="fa-solid fa-info fa-lg"></i> About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Menu</a>
+                        <a href="#" class="nav-link"><i class="fa-solid fa-list fa-lg"></i> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#" class="nav-link"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a>
                     </li>
                     <li>
                         <button class="main-btn">+2126 01 02 03 04</button>
@@ -108,19 +112,20 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              Tel.: +212 600 0000<br>
-		              Fax: +212 711 1111<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              <i class="fa-solid fa-phone fa-lg"></i> : +212 600 0000<br>
+		              <i class="fa-solid fa-fax fa-lg"></i> : +212 711 1111<br>
+		              <i class="fa-solid fa-envelope fa-lg"></i> : <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-primary" style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
+                        <a class="btn btn-primary" style="background-color: #3b5998;" href="http://www.facebook.com/profile.php?id=" role="button"><i class="fa-brands fa-facebook-f fa-lg"></i></a>
+                        <a class="btn btn-primary" style="background-color: #0082ca;" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-primary" style="background-color: #55acee;" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-primary" style="background-color: #ed302f;" href="#!" role="button"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-primary" style="background-color: #25d366;" href="#!" role="button"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-primary" style="background-color: #dd4b39;" href="mailto:" role="button"><i class="fa fa-envelope"></i> </a>
                     </div>
                 </div>
            </div>
