--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
                         <a href="#" class="nav-link"><i class="fa-solid fa-list fa-lg"></i> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a>
+                        <a href="contactus.html" class="nav-link"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a>
                     </li>
                     <li>
                         <button class="main-btn">+2126 01 02 03 04</button>
