adding buttons to contact

--- a/contactus.html
+++ b/contactus.html
@@ -92,7 +92,11 @@
                 <h5>Map of our Location</h5>
             </div>
             <div class="col-12 col-sm-11 offset-sm-1">
-                Button group goes here
+                <div class="btn-group" role="group">
+                    <a role="button" class="btn btn-primary" href="tel:+212609860000"><i class="fa fa-phone"></i> Call</a>
+                    <a role="button" class="btn btn-info" href="#"><i class="fa-brands fa-skype"></i> Skype</a>
+                    <a role="button" class="btn btn-success" href="mailto:xxxx@gmail.com"><i class="fa-solid fa-envelope"></i> Email</a>
+                </div>
             </div>
         </div>
 
