--- a/contactus.html
+++ b/contactus.html
@@ -82,8 +82,8 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
+		              <i class="fa fa-phone"></i>: +212 6012 010<br>
+		              <i class="fa fa-fax"></i>: +212 544 400<br>
 		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
@@ -101,11 +101,38 @@
         </div>
 
         <div class="row row-content">
-           <div class="col-12">
+           <div class="col-12 mb-5">
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form action="">
+                    <div class="row mb-4">
+                        <label for="firstname" class="col-md-3 form-label">First Name</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                        </div>    
+                    </div>
+                    <div class="row mb-4">
+                        <label for="lastname" class="col-md-3 form-label">Last Name</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control" id="firstname" name="lastname" placeholder="Last Name">
+                        </div>    
+                    </div>
+                    <div class="row mb-4">
+                        <label for="inputEmail" class="col-md-3 form-label">Email address</label>
+                        <div class="col-md-9">
+                            <input type="email" class="form-control" id="inputEmail" placeholder="xxxx@gmail.com" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div> 
+                    </div>
+                    <div class="row mb-4">
+                        <label for="textarea1" class="col-md-3 form-label">Your Feedback</label>
+                        <div class="col-md-9">
+                            <textarea class="form-control" id="textarea1" rows="8"></textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Feedback</button>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
@@ -155,10 +182,9 @@
            </div>
         </div>
     </footer>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <script src="bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
